# Copyright 2015 The V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//build/config/ui.gni")
import("//gni/v8.gni")

if (is_android) {
  import("//build/config/android/config.gni")
}

if (((v8_target_arch == "ia32" ||
      v8_target_arch == "x64" ||
      v8_target_arch=="x87") &&
     (is_linux || is_mac)) ||
    (v8_target_arch == "ppc64" && is_linux)) {
  v8_enable_gdbjit = true
}

icu_use_data_file = false
v8_imminent_deprecation_warnings = true
v8_optimized_debug = false

# Add simple extras solely for the purpose of the cctests.
v8_extra_library_files = [ "//test/cctest/test-extra.js" ]
v8_experimental_extra_library_files = [ "//test/cctest/test-experimental-extra.js" ]
