# Copyright 2016 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/sanitizers/sanitizers.gni")

declare_args() {
  # Enable the snapshot feature, for fast context creation.
  # http://v8project.blogspot.com/2015/09/custom-startup-snapshots.html
  v8_use_snapshot = true

  # Use external files for startup data blobs:
  # the JS builtins sources and the start snapshot.
  v8_use_external_startup_data = !is_ios

  # V8 generates code for this architecture. If v8_target_arch differs from
  # target_cpu, a simulator will be run.
  v8_target_arch = ""
}

if (v8_target_arch == "") {
  if (is_msan) {
    # Running the V8-generated code on an ARM simulator is a powerful hack that
    # allows the tool to see the memory accesses from JITted code. Without this
    # flag, JS code causes false positive reports from MSan.
    v8_target_arch = "arm64"
  } else {
    v8_target_arch = target_cpu
  }
}
