# Copyright 2016 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../gni/isolate.gni")

group("gn_all") {
  testonly = true

  data_deps = [
    ":v8_check_static_initializers",
    "gcmole:v8_run_gcmole",
    "jsfunfuzz:v8_jsfunfuzz",
  ]

  if (v8_test_isolation_mode != "noop") {
    deps = [
      ":check-static-initializers_run",
      ":jsfunfuzz_run",
      ":run-gcmole_run",
      ":run-num-fuzzer_run",
    ]
  }
}

group("v8_check_static_initializers") {
  data_deps = [
    "..:d8",
  ]

  data = [
    "check-static-initializers.sh",
  ]
}

v8_isolate_run("check-static-initializers") {
  deps = [
    "..:d8_run",
  ]

  isolate = "check-static-initializers.isolate"
}

v8_isolate_run("jsfunfuzz") {
  deps = [
    "..:d8_run",
  ]

  isolate = "jsfunfuzz/jsfunfuzz.isolate"
}

v8_isolate_run("run-gcmole") {
  deps = [
    "..:d8_run",
  ]

  isolate = "gcmole/run-gcmole.isolate"
}

# TODO(machenbach): Add tests as dependencies.
v8_isolate_run("run-num-fuzzer") {
  deps = [
    "..:d8_run",
  ]

  isolate = "run-num-fuzzer.isolate"
}
