# Copyright 2016 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../gni/v8.gni")

v8_executable("inspector_protocol_parser_test") {
  testonly = true
  deps = [
    "../../src/inspector:inspector_protocol",
    "//build/config/sanitizers:deps",
    "//build/win:default_exe_manifest",
    "//testing/gmock",
    "//testing/gtest",
  ]
  configs = [
    "../../src/inspector:inspector_protocol_config"
  ]
  sources = [
    "//third_party/WebKit/Source/platform/inspector_protocol/ParserTest.cpp",
    "RunTests.cpp",
  ]
}
